# firechat-arena

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
configs/: config.yaml  configs.yaml
src/: logging.py
src/modules/: benchmark.py  llm_completion.py  session.py
src/routes/: api_routes.py
tests/: test_conversation_history.py
