[project]
name = "firechat-arena"
version = "0.1.0"
description = "Backend for Firechat Application"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fireworks-ai",
    "pre-commit",
    "fastapi",
    "uvicorn",
    "ipython",
    "python-dotenv",
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[tool.setuptools.packages.find]
where = ["src"]
